<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/khaki"
    android:orientation="vertical">

    <ImageView
        android:id="@+id/iv_portrait"
        android:layout_width="@dimen/dp_100"
        android:layout_height="@dimen/dp_100"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/dp_100"
        android:background="@drawable/ic_default_portrait" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tv_details"
            style="@style/TextStyle"
            android:drawableLeft="@drawable/ic_details"
            android:text="@string/setting_detalis" />

        <TextView
            android:id="@+id/tv_account"
            style="@style/TextStyle"
            android:drawableLeft="@drawable/ic_account"
            android:text="@string/setting_account" />

        <TextView
            android:id="@+id/tv_cache"
            style="@style/TextStyle"

            android:drawableLeft="@drawable/ic_clean"
            android:text="@string/setting_cache" />

        <TextView
            android:id="@+id/tv_currency"
            style="@style/TextStyle"
            android:drawableLeft="@drawable/ic_currency"
            android:text="@string/setting_currency" />

        <TextView
            android:id="@+id/tv_about"
            style="@style/TextStyle"
            android:drawableLeft="@drawable/ic_about"
            android:text="@string/setting_about" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_unlogin"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/deepskyblue"
        android:gravity="center"
        android:padding="@dimen/dp_20"
        android:text="@string/setting_unLogin"
        android:textColor="@color/white"
        android:textSize="@dimen/sp_20" />
</LinearLayout>