<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/khaki"
    android:orientation="vertical">



        <include layout="@layout/title_bar" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/dp_20"
            android:layout_marginTop="@dimen/dp_100"
            android:layout_marginRight="@dimen/dp_20"
            android:orientation="vertical">

            <EditText
                android:id="@+id/et_nickname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:hint="@string/register_name"
                android:inputType="text"
                android:maxEms="8"
                android:maxLength="8"
                android:maxLines="1" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20">


                <EditText
                    android:id="@+id/et_phone"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/register_phonenum"
                    android:inputType="phone"
                    android:maxLength="11"
                    android:maxLines="1" />

                <TextView
                    android:id="@+id/tv_getNum"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/shape_login_radius_10"
                    android:gravity="center"
                    android:padding="@dimen/dp_10"
                    android:text="@string/register_getnum"
                    android:textColor="@color/white"
                    android:textSize="10sp" />
            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20">

                <EditText
                    android:id="@+id/et_num"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:digits="@string/filter_vcode"
                    android:hint="@string/register_num"
                    android:inputType="text"
                    android:maxLength="6" />

                <TextView
                    android:id="@+id/tv_Num"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/shape_side_blue"
                    android:clickable="false"
                    android:padding="@dimen/dp_10"
                    android:textColor="@color/black"
                    android:textSize="10sp"
                    android:visibility="gone" />
            </RelativeLayout>

            <EditText
                android:id="@+id/et_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/register_password"
                android:inputType="textPassword" />

            <EditText
                android:id="@+id/et_newpassword"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:hint="@string/register_newpassword"
                android:imeOptions="actionDone"
                android:inputType="textPassword" />



            <Button
                android:id="@+id/but_register"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/dp_20"
                android:text="@string/register" />
        </LinearLayout>

        <TextView
            android:id="@+id/tv_statment"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="@dimen/dp_40"
            android:layout_weight="1"
            android:gravity="bottom"
            android:text="@string/privacy_statement"
            android:textColor="@color/blue"
            android:textSize="@dimen/sp_12" />
    </LinearLayout>
