<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/khaki"
    android:orientation="vertical">

    <include layout="@layout/title_bar" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/dp_60"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginRight="@dimen/dp_20">

                <ImageView
                    android:layout_centerVertical="true"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_marginTop="@dimen/dp_10"
                    android:src="@drawable/ic_account" />

                <EditText
                    android:id="@+id/et_account"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="@dimen/dp_10"
                    android:hint="@string/account_hint"
                    android:maxLines="1"
                    android:paddingLeft="@dimen/dp_50"
                    android:textSize="@dimen/sp_16" />

            </RelativeLayout>

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="@dimen/dp_20"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dp_20">

                <ImageView
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:src="@drawable/ic_password" />

                <EditText
                    android:id="@+id/et_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/password_hint"
                    android:inputType="textPassword"
                    android:paddingLeft="@dimen/dp_50"
                    android:textSize="@dimen/sp_16" />

                <ImageView
                    android:id="@+id/img_showpass"
                    android:layout_width="@dimen/dp_30"
                    android:layout_height="@dimen/dp_30"
                    android:layout_alignParentRight="true"
                    android:background="@drawable/ic_nolook" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_registered"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_marginTop="10dp"
                android:layout_marginRight="@dimen/dp_20"
                android:gravity="right"
                android:text="@string/register" />

            <Button
                android:id="@+id/but_login"
                android:layout_width="match_parent"
                android:layout_height="@dimen/dp_60"
                android:layout_marginLeft="@dimen/dp_50"
                android:layout_marginTop="@dimen/dp_100"
                android:layout_marginRight="@dimen/dp_50"
                android:text="@string/login" />
        </LinearLayout>


    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="bottom"
        android:layout_marginLeft="@dimen/dp_20"
        android:layout_marginRight="@dimen/dp_20"
        android:layout_marginBottom="@dimen/dp_20"
        android:layout_weight="1"
        android:gravity="bottom"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/img_qq"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:src="@drawable/ic_qq" />

        <ImageView
            android:id="@+id/img_weixin"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:src="@drawable/ic_weixin" />

        <ImageView
            android:id="@+id/img_weibo"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_marginRight="@dimen/dp_10"
            android:layout_weight="1"
            android:src="@drawable/ic_weibo" />

        <ImageView
            android:id="@+id/img_more"
            android:layout_width="0dp"
            android:layout_height="@dimen/dp_50"
            android:layout_marginLeft="@dimen/dp_10"
            android:layout_weight="1"
            android:src="@drawable/ic_qita" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_statment"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginBottom="@dimen/dp_40"
        android:gravity="bottom"
        android:text="@string/privacy_statement"
        android:textColor="@color/blue"
        android:textSize="@dimen/sp_12" />
</LinearLayout>